k8s/ms6.northwind-go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: northwind-go-ingress
  namespace: northwind-go
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: northwind.anla.works
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: northwind-go-service
                port:
                  number: 80
